# simple-tcpserver

./: Makefile.am  Makefile.in  README.rst  config.h.in  configure  configure.ac
client/: Makefile.am  Makefile.in  main.cpp
server/: Makefile.am  Makefile.in  main.cpp
